# first_project

./: CMakeLists.txt  main.cpp
img/: img.txt
src/lib/: figures.cpp  figures.h  lib.txt
src/widgets/: angelwindow.cpp  angelwindow.h  angelwindow.ui  distancewindow.cpp  distancewindow.h  distancewindow.ui  graphwindow.cpp  graphwindow.h  graphwindow.ui  intersectwindow.cpp  intersectwindow.h  intersectwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  operatorwindow.cpp  operatorwindow.h  operatorwindow.ui  widgets.txt
src/widgets/headers/: angelwindow.h  distancewindow.h  graphwindow.h  intersectwindow.h  mainwindow.h  operatorwindow.h
src/widgets/sources/: angelwindow.cpp  distancewindow.cpp  graphwindow.cpp  intersectwindow.cpp  mainwindow.cpp  operatorwindow.cpp
src/widgets/sources/form/: angelwindow.ui  distancewindow.ui  graphwindow.ui  intersectwindow.ui  mainwindow.ui  operatorwindow.ui
